forms update view and added other segments

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,4 +1,10 @@
 <p id="notice"><%= notice %></p>
+<div class="input-group mb-3">
+  <input type="text" class="form-control" placeholder="Jobs">
+  <div class="input-group-prepend">
+    <button class="btn btn-secondary" id="basic-addon1">Search</button>
+  </div>
+</div>
 
 <h1>Jobs</h1>
 
