--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,60 +1,45 @@
 <h2>Sign up</h2>
+    <style>
+      .btn-google {
+        background: #ad1111;
+      }
+      .btn-facebook {
+        background: #156cab;
+      }
+    </style>
+    <div class="card card-signin my-5" style="margin-left: 400px; width: 500px">
+      <div class="card-body">
+        <h5 class="card-title text-center">Sign up</h5>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
 
-  <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<div class="card card-signin my-5" style="margin-left: 400px; width: 500px">
-<div class="card-body">
-  <h5 class="card-title text-center">Sign In</h5>
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <div class="form-label-group">
-      <label for="inputEmail">Email address</label>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class:'form-control' %>
-    </div>
-
-    <div class="form-label-group">
-      <label for="inputPassword">Password</label>
-      <%= f.password_field :password, autocomplete: "current-password", class:'form-control' %>
-    </div>
-
-    <div class="custom-control custom-checkbox mb-3">
-    </div>
+        <div class="form-label-group">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class:'form-control' %>
+      </div>
     
-    <%= f.submit "Sign up", class:'btn btn-lg btn-primary btn-block text-uppercase' %>
-    <hr class="my-4">
-    <button class="btn btn-lg btn-google btn-block text-uppercase text-white" type="submit">Sign in with Google</button>
-    <button class="btn btn-lg btn-facebook btn-block text-uppercase text-white" type="submit">Sign in with Facebook</button>
-    <%= render "devise/shared/links" %>
-  <% end %>
-</div>
-</div>
-
-<%= render "devise/shared/links" %>
+      <div class="form-label-group">
+        <%= f.label :name %><br />
+        <%= f.text_field :name, class:'form-control' %>
+      </div>
+    
+      <div class="form-label-group">
+        <%= f.label :password %>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password", class:'form-control' %>
+      </div>
+    
+      <div style="margin-bottom: 20px" class="form-label-group">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class:'form-control' %>
+      </div>
+          
+          <%= f.submit "Sign up", class:'btn btn-lg btn-primary btn-block text-uppercase' %>
+          <hr class="my-4">
+          <%= render "devise/shared/links" %>
+        <% end %>
+      </div>
+    </div>
