--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -12,18 +12,18 @@
         </div>
     <% end %>
 
-    <div class="form-group field" style="width: 200%">
-        <%= form.label :title %>
-        <%= form.text_field :title, id: :job_title, class:"form-control" %>
-    </div>
+        <div class="form-group field" style="width: 200%">
+            <%= form.label :title %>
+            <%= form.text_field :title, id: :job_title, class:"form-control" %>
+        </div>
 
-    <div class="form-group field" style="width: 200%">
-        <%= form.label :body %>
-        <%= form.text_area :body, id: :job_body, class:"form-control" %>
-    </div>
+        <div class="form-group field" style="width: 200%">
+            <%= form.label :body %>
+            <%= form.text_area :body, id: :job_body, class:"form-control" %>
+        </div>
 
-    <div class="actions">
-        <%= form.submit %>
-    </div>
+        <div class="actions">
+            <%= form.submit 'Sumbit', :class => 'btn btn-primary' %>
+        </div>
     <% end %>
 </div>
