--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -157,8 +157,9 @@
       padding: 0px;
     }
     
-    a:hover {
+    a:hover, button:hover {
       background: none !important;
+      color: #333 !important;
     }
   </style>
   </head>
