--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -168,33 +168,35 @@
   <body>
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
-<div class="nav-side-menu">
-    <div class="brand"><h3 style="padding: 5px">Pekarna Služb</h3></div>
-    <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
-<li>
-    <a href="/">
-    <i class="fa fa-home" aria-hidden="true"></i> Home
-    </a>
-</li>   
-<% if user_signed_in? %>
-<li>
-<%= link_to(current_user.email, edit_user_registration_path) %>
-</li>
-<li>
-<%= link_to('Logout', destroy_user_session_path, method: :delete) %>        
-</li>
-<% else %>
-<li>
-<%= link_to('Login', new_user_session_path) %>  
-</li>
-<li>
-<%= link_to('Register', new_user_registration_path) %>
-</li>
+<% unless current_page?(root_path) %>
+  <div class="nav-side-menu">
+      <div class="brand"><h3 style="padding: 5px">Pekarna Služb</h3></div>
+      <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
+  <li>
+      <a href="/">
+      <i class="fa fa-home" aria-hidden="true"></i> Home
+      </a>
+  </li>   
+  <% if user_signed_in? %>
+  <li>
+  <%= link_to(current_user.email, edit_user_registration_path) %>
+  </li>
+  <li>
+  <%= link_to('Logout', destroy_user_session_path, method: :delete) %>        
+  </li>
+  <% else %>
+  <li>
+  <%= link_to('Login', new_user_session_path) %>  
+  </li>
+  <li>
+  <%= link_to('Register', new_user_registration_path) %>
+  </li>
+  <% end %>
+              </ul>
+      </div>
+  </div>
 <% end %>
-            </ul>
-     </div>
-</div>
-<div style="position: absolute; left: 300px; padding: 20px;">
+<div class="big-container" style="position: absolute; left: 300px; padding: 20px;">
 <%= yield %>
 </div>
   </body>
