--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <style>
     body {
-      background: #ddd
+      background: #ccc
     }
     .nav-side-menu {
       overflow: auto;
