added is company (needs work)

--- a/app/views/base/index.html.erb
+++ b/app/views/base/index.html.erb
@@ -72,20 +72,19 @@
          border: 1px solid #3291AA;
       }
     </style>
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Amatic+SC&display=swap" rel="stylesheet">
     <section class="hero">
-    <div class="hero-content" style="border-radius: 10px; width: 100vw; box-shadow: 0 10px 10px #333; background: #eeeeeeaa; padding: 10px">
-      <h1 class= "hero-title">
+    <div class="hero-content" style="border-radius: 10px; width: 100vw; box-shadow: 0 10px 10px #333; background: #eeeeeeca; padding: 10px">
+      <h1 class= "hero-title" style="font-family: 'Rubik', sans-serif;">
         Job Backerei
       </h1>
-      <h2 class="hero-subtitle" style="font-family: 'Amatic SC', cursive; color: #111">
+      <h1 class="hero-subtitle" style="font-family: 'Amatic SC', cursive; color: #000">
         "The best way to predict the future is to create it." —Abraham Lincoln
-      </h2>
+      </h1>
       <div class="container">
       <div class="row">
         <div class="col-sm">
           <div class="btn-group dropleft">
-              <button id="area_" style="border-bottom: 3px solid #80e5ff; width: 10vw" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <button id="area_" style="border-bottom: 3px solid #0099cc; width: 10vw" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Job Title
               </button>
               <div class="dropdown-menu">
@@ -97,7 +96,7 @@
         </div>
         <div class="col-sm">
           <div class="btn-group dropleft">
-              <button id="loaction_" style="border-bottom: 3px solid #80e5ff; width: 10vw" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <button id="loaction_" style="border-bottom: 3px solid #0099cc; width: 10vw" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Location
               </button>
               <div class="dropdown-menu">
