--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,15 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Barlow|Rubik&display=swap" rel="stylesheet">
     <style>
     body {
-      background: #ccc
+      background: url(https://wallpaperaccess.com/full/945996.jpg)
+    }
+    h1 {
+      font-family: font-family: 'Rubik', sans-serif !important;
+      color: #ddd !important;
+
     }
     .nav-side-menu {
       overflow: auto;
