--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign up</h2>
+<h1>Sign up</h1>
     <style>
       .btn-google {
         background: #ad1111;
@@ -38,8 +38,8 @@
       </div>
 
       <div style="margin-bottom: 20px" class="form-check">
-        <%= f.check_box :isCompany, class:'form-check-input' %>
-        <label class="form-check-label" for="exampleCheck1">Are you a compnay?</label>
+        <%= f.check_box :company, class:'form-check-input' %>
+        <label class="form-check-label">Are you a compnay?</label>
       </div>
           
           <%= f.submit "Sign up", class:'btn btn-lg btn-primary btn-block text-uppercase' %>
