--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -1,22 +1,58 @@
-<li>
-<%= link_to('Home', root_path) %>        
-</li>
-<% if user_signed_in? %>
-<li>
-<%= current_user.email %>
-<%= link_to('Logout', destroy_user_session_path, method: :delete) %>        
-</li>
-<% else %>
-<li>
-<%= link_to('Login', new_user_session_path) %>  
-</li>
+<% unless current_page?(root_path) %>
+  <div class="nav-side-menu">
+      <div class="brand"><h3 style="padding: 5px">Pekarna Služb</h3></div>
+      <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
+  <li>
+      <a href="/">
+      <i class="fa fa-home" aria-hidden="true"></i> Home
+      </a>
+  </li>   
+  <% if user_signed_in? %>
+  <li>
+  <%= link_to(current_user.email, edit_user_registration_path) %>
+  </li>
+  <li>
+  <%= link_to('Logout', destroy_user_session_path, method: :delete) %>        
+  </li>
+  <% else %>
+  <li>
+  <%= link_to('Login', new_user_session_path) %>  
+  </li>
+  <li>
+  <%= link_to('Register', new_user_registration_path) %>
+  </li>
+  <% end %>
+              </ul>
+      </div>
+  </div>
 <% end %>
-<% if user_signed_in? %>
-<li>
-<%= link_to('Edit registration', edit_user_registration_path) %>
-</li>
-<% else %>
-<li>
-<%= link_to('Register', new_user_registration_path) %>
-</li>
+<% if current_user %>
+    <% if current_user.company %>
+      <div class="nav-side-menu">
+      <div class="brand"><h3 style="padding: 5px">Pekarna Služb</h3></div>
+      <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
+        <li>
+            <a href="/">
+            <i class="fa fa-home" aria-hidden="true"></i> Home
+            </a>
+        </li>   
+        <% if user_signed_in? %>
+        <li>
+        <%= link_to(current_user.email, edit_user_registration_path) %>
+        </li>
+        <li>
+        <%= link_to('Logout', destroy_user_session_path, method: :delete) %>        
+        </li>
+        <% else %>
+        <li>
+        <%= link_to('Login', new_user_session_path) %>  
+        </li>
+        <li>
+        <%= link_to('Register', new_user_registration_path) %>
+        </li>
+        <% end %>
+                    </ul>
+            </div>
+        </div>
+    <% end %>
 <% end %>
