--- a/app/views/base/_company.html.erb
+++ b/app/views/base/_company.html.erb
@@ -1,4 +1,7 @@
 <h1>Your Jobs</h1>
+<button onclick="window.location='/jobs'" class="btn btn-primary">
+  View all jobs
+</button>
 <p id="notice"><%= notice %></p>
 
 <% @jobs.each do |job| %>
@@ -6,7 +9,7 @@
   <img src="https://i.imgur.com/vCTar9J.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title"><%= job.title %></h5>
-    <p class="card-text"><%= job.body %></p>
+    <p class="card-text" style="white-space: nowrap;"><%= job.body[0..20] %></p>
     <%= link_to 'Edit', edit_job_path(job), class:'btn btn-primary text-white' %>
     <%= link_to 'Details', job, class:'btn btn-dark text-white' %>
     <%= link_to 'Delete', job, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-danger text-white' %>
@@ -17,5 +20,7 @@
 <br style="clear: both">
 
 <% if user_signed_in? %>
-  <%= link_to 'New Job', new_job_path %>
+  <button onclick="window.location='/jobs/new'" class="btn btn-primary">
+    Add new job
+  </button>
 <% end %>
