--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -27,16 +27,12 @@
   <img src="https://i.imgur.com/vCTar9J.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title"><%= job.title %></h5>
-    <p class="card-text"><%= job.body %></p>
-    <%= link_to 'Edit', edit_job_path(job), class:'btn btn-primary text-white' %>
-    <%= link_to 'Details', job, class:'btn btn-dark text-white' %>
-    <%= link_to 'Delete', job, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-danger text-white' %>
+    <p class="card-text" style="white-space: nowrap;"><%= job.body[0..35] %><%= job.body.length > 35 ? '...' : '' %></p>
+    <hr style="border-top: 1px solid #444;" />
+    <p class="card-text"><i class="fa fa-user" aria-hidden="true"></i>&nbsp;<%= job.user.name %></p>
+    <%= link_to 'Details', job, class:'btn btn-dark text-white', style:"float:right" %>
   </div>
 </div>
 <% end %>
 
 <br style="clear: both">
-
-<% if user_signed_in? %>
-  <%= link_to 'New Job', new_job_path %>
-<% end %>
