--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,15 +1,17 @@
-<h1>Jobs</h1>
+<h1 style="margin-left: 10px">Jobs</h1>
 
 <p id="notice"><%= notice %></p>
-<div class="input-group mb-3">
+
+<div class="container">
+  <div style="margin-left: -120px" class="row">
+    <div class="col-6"><div  style="float: left" class="input-group mb-3">
   <input type="text" class="form-control" placeholder="Jobs">
   <div class="input-group-prepend">
-    <button class="btn btn-secondary" id="basic-addon1">Search</button>
+    <button class="btn btn-primary" id="basic-addon1">Search</button>
   </div>
-</div>
-
-<div class="btn-group dropleft" style="float: right">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+</div></div>
+    <div class="col"><div class="btn-group dropleft" style="float: right">
+  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     Sort By
   </button>
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -18,7 +20,12 @@
     <a class="dropdown-item" href="#">Alphabetical | ASC</a>
     <a class="dropdown-item" href="#">Alphabetical | DESC</a>
   </div>
+</div></div>
+  </div>
 </div>
+
+
+
 
 <br style="clear:both"/>
 
