--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,19 +1,62 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>User:</strong>
-  <%= @job.user %>
-</p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @job.title %>
-</p>
+  <div id="carouselExampleControls" style="float:left; width: 60%" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="https://images.pexels.com/photos/326055/pexels-photo-326055.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://images.pexels.com/photos/326055/pexels-photo-326055.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://images.pexels.com/photos/326055/pexels-photo-326055.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 
-<p>
-  <strong>Body:</strong>
-  <%= @job.body %>
-</p>
+  <div style="float: right; margin-left: 5px: width: 40%">
+  <p>
+    <strong>User:</strong>
+    <%= @job.user.name %>
+  </p>
 
-<%= link_to 'Edit', edit_job_path(@job) %> |
-<%= link_to 'Back', jobs_path %>
+  <p>
+    <strong>Craeted:</strong>
+    <%= @job.created_at %>
+  </p>
+
+  <p>
+    <strong>Updated:</strong>
+    <%= @job.updated_at %>
+  </p>
+
+
+  <p>
+    <strong>Title:</strong>
+    <%= @job.title %>
+  </p>
+
+  <p>
+    <strong>Body:</strong>
+    <%= @job.body %>
+  </p>
+
+  </div>
+<hr style="clear: both" />
+
+<div class="btn-group" role="group" aria-label="Basic example">
+  <%= link_to 'Edit', edit_job_path(@job), class:"btn btn-secondary text-white" %>
+  <%= link_to 'Back', jobs_path, class:"btn btn-danger text-white" %>
+</div>
+
+
+
