--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -39,12 +39,20 @@
     <p class="card-text"><i class="fa fa-user" aria-hidden="true"></i>&nbsp;<%= job.user.name %></p>
     <% if current_user %>
       <% if !current_user.company %>
-        <button style="float:right; margin-left: 10px" class="btn btn-primary">Apply</button>
+        <button style="float:right; margin-left: 10px" onclick="Apply()" class="btn btn-primary">Apply</button>
       <% end %>
     <% end %>
     <%= link_to 'Details', job, class:'btn btn-dark text-white', style:"float:right" %>
   </div>
 </div>
 <% end %>
+
+<script>
+  function Apply(event) {
+    fetch("/apply").then(response => response.json()).then(result => {
+      console.log(result)
+    })
+  }
+</script>
 
 <br style="clear: both">
