--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -22,6 +22,17 @@
             <%= form.text_area :body, id: :job_body, class:"form-control" %>
         </div>
 
+        
+        <div class="form-group" style="width: 200%">
+            <%= form.label :Area %>
+            <%= form.select(:area_id, Area.all.collect {|u| [u.title, u.id]}, { :include_blank => false },  {:class => 'form-control'}) %>
+        </div>
+
+        <div class="form-group" style="width: 200%">
+            <%= form.label :Location %>
+            <%= form.select(:location_id, Location.all.collect {|u| [u.title, u.id]}, { :include_blank => false },  {:class => 'form-control'}) %>
+        </div>
+
         <div class="actions">
             <%= form.submit 'Sumbit', :class => 'btn btn-primary' %>
         </div>
