--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -3,13 +3,15 @@
       <div class="brand"><h3 style="padding: 5px">Pekarna Služb</h3></div>
       <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
   <li>
+      <i class="fa fa-home" aria-hidden="true"></i>
       <a href="/">
-      <i class="fa fa-home" aria-hidden="true"></i> Home
+        Home
       </a>
-    </li>
+    </li>A
     <li>
+        <i class="fa fa-briefcase" aria-hidden="true"></i>
         <a href="/jobs">
-        <i class="fa fa-briefcase" aria-hidden="true"></i> Jobs
+         Jobs
        </a>
       
   </li>   
@@ -42,13 +44,15 @@
       <div class="brand"><h3 style="padding: 5px">Pekarna Služb</h3></div>
       <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
    <li>
-      <a href="/">
-      <i class="fa fa-home" aria-hidden="true"></i> Home
-      </a>
+        <i class="fa fa-home" aria-hidden="true"></i>
+        <a href="/">
+            Home
+        </a>
     </li>
     <li>
+        <i class="fa fa-briefcase" aria-hidden="true"></i>
         <a href="/jobs">
-        <i class="fa fa-briefcase" aria-hidden="true"></i> Jobs
+         Jobs
        </a>
       
   </li>  
