layout updates & fixes

--- a/app/views/base/_company.html.erb
+++ b/app/views/base/_company.html.erb
@@ -10,7 +10,7 @@
 <p id="notice"><%= notice %></p>
 
 <% @jobs.each do |job| %>
-<div class="card" style="width: 30%; float: left; margin: 5px">
+<div class="card cstm-card" style="width: 30%; float: left; margin: 5px;">
   <img src="https://i.imgur.com/vCTar9J.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title"><%= job.title %></h5>
