--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -1,6 +1,6 @@
 <% unless current_page?(root_path) %>
   <div class="nav-side-menu">
-      <div class="brand"><h3 style="padding: 5px">Pekarna Služb</h3></div>
+      <div class="brand"><img src="https://i.imgur.com/VEnjDM4.png" height="100%" width="100%" /></div>
       <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
   <li>
       <i class="fa fa-home" aria-hidden="true"></i>
@@ -41,7 +41,7 @@
 <% if current_user %>
     <% if current_user.company %>
       <div class="nav-side-menu">
-      <div class="brand"><h3 style="padding: 5px">Pekarna Služb</h3></div>
+      <div class="brand"><img src="https://i.imgur.com/VEnjDM4.png" height="100%" width="100%" /></div>
       <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
    <li>
         <i class="fa fa-home" aria-hidden="true"></i>
