--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -12,25 +12,30 @@
         </div>
     <% end %>
 
-        <div class="form-group field" style="width: 200%">
+        <div class="form-group field" style="width: 80%">
             <%= form.label :title %>
             <%= form.text_field :title, id: :job_title, class:"form-control" %>
         </div>
 
-        <div class="form-group field" style="width: 200%">
+        <div class="form-group field" style="width: 80%">
             <%= form.label :body %>
             <%= form.text_area :body, id: :job_body, class:"form-control" %>
         </div>
 
         
-        <div class="form-group" style="width: 200%">
+        <div class="form-group" style="width: 80%">
             <%= form.label :Area %>
             <%= form.select(:area_id, Area.all.collect {|u| [u.title, u.id]}, { :include_blank => false },  {:class => 'form-control'}) %>
         </div>
 
-        <div class="form-group" style="width: 200%">
+        <div class="form-group" style="width: 80%">
             <%= form.label :Location %>
             <%= form.select(:location_id, Location.all.collect {|u| [u.title, u.id]}, { :include_blank => false },  {:class => 'form-control'}) %>
+        </div>
+
+        <div class="form-group">
+            <%= form.label :"Upload Image" %>
+            <input type="file" class="form-control-file">
         </div>
 
         <div class="actions">
